--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -33,11 +33,11 @@
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/reset.css" />
-        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/bundle.css" />
-        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lightgallery.css" />
-        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lg-transitions.min.css" />
-        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
-        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/bundle.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lightgallery.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lg-transitions.min.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
     <script type="application/ld+json">
         {
         "@@context": "https://schema.org",
@@ -71,28 +71,34 @@
         }
     </script>
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5G89M2V');</script>
-<!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+    (function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5G89M2V');</script>
+    <!-- End Google Tag Manager -->
 
 </head>
 <body class="@RenderSection("BodyClass", false)">
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5G89M2V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5G89M2V"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <header>
         <a href="/" class="sparkt-logo"> <img src="~/Content/work/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/work/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
         <div class="hamburger">
             <div class="line-menu half start"></div>
             <div class="line-menu"></div>
-            <div class="line-menu half end"></div>  
+            <div class="line-menu half end"></div>
         </div>
         <div class="main-menu">
             <ul class="scroll-content">
@@ -100,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><a href="/#we"><span>We</span></a> </li>
                 <li><a href="/#clients"><span>Clients</span></a> </li>
                 <li><a href="/#work"><span>Work</span></a> </li>
-                  <li><a href="/#AugmentedReality"><span title="Experiential Solutions">Experiential</span></a> </li>
+                <li><a href="/#AugmentedReality"><span title="Experiential Solutions">Experiential</span></a> </li>
                 <li><a href="/#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li><a href="/#contact"><span>Get In Touch</span></a> </li>
             </ul>
@@ -208,7 +214,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </ul>
             </div>
             <div class="revent-logo"><!--<span><img src="images/revent-logo.png" alt="Revent"/></span>--></div>
-            <div class="copyright"><span>Copyright © 2018-19 Sparkt Pvt. Ltd.</span></div>
+            <div class="copyright"><span>Copyright © 2017-21 Sparkt Pvt. Ltd.</span></div>
 
         </div>
 
