--- a/Sparkt.WebApp/Views/work/BhartiAxaCropApp.cshtml
+++ b/Sparkt.WebApp/Views/work/BhartiAxaCropApp.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/bharti-axa-cop-app";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/bharti-axa-cop-app-thum.jpg";
 }
-
+@section BodyClass {bharti-axa}
     <main>
         <div class="section white-bg">
             <div class="work-banner">
@@ -21,7 +21,7 @@
                 </div>
                 <div class="head-title floated text-color-dark">
                     <i class="title-icon"><img src="/Content/work/images/title-icon.png" alt="" /></i>
-                    <h1>Bharti AXA Cop App</h1>
+                    <h1>Bharti AXA Crop App</h1>
                     <div class="clear"></div>
                     <span>Crop Insurance Reimagined</span>
                 </div>
