--- a/Sparkt.WebApp/Views/work/GandhiFellowship.cshtml
+++ b/Sparkt.WebApp/Views/work/GandhiFellowship.cshtml
@@ -8,7 +8,7 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/gandhi-fellowship-thum.jpg";
 }
 
-@section BodyClass {GandhiFellowship}
+@section BodyClass {piramal}
     <main>
         <div class="section">
             <div class="work-banner">
@@ -41,20 +41,20 @@
                                     <div class="website-operation">
                                         <figure class="figure-img"> <img src="/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
                                         <div class="desktop-video">
-                                            <video id="desktop" poster="/Content/work/images/gandhi-fellowship-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/gandhi-fellowship-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-desktop.mp4" type="video/mp4" >-->
+                                            <video id="desktop" style="max-width: 100%; background-image: url('/Content/work/images/gandhi-fellowship-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                               <source  src="~/Content/work/media/gandhi-fellowship-desktop.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById( "desktop" ).controls = false;</script>
                                         </div>
                                         <div class="mobile-video">
-                                            <video id="mobile" poster="/Content/work/images/gandhi-fellowship-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/gandhi-fellowship-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-mob.mp4" type="video/mp4" >-->
+                                            <video id="mobile" style="max-width: 100%; background-image: url('/Content/work/images/gandhi-fellowship-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
+                                                 <source  src="~/Content/work/media/gandhi-fellowship-mobile.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById("mobile").controls = false;</script>
                                         </div>
-                                        <!--                  <a href="https://www.pchf.in/" target="_blank" class="view-website" >VIEW WEBSITE</a> -->
+                                                     <a href="http://gandhifellowship.org/" target="_blank" class="view-website" >VIEW WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
