--- a/Sparkt.WebApp/Views/work/ICan.cshtml
+++ b/Sparkt.WebApp/Views/work/ICan.cshtml
@@ -1,14 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | ICan Help";
+    ViewBag.Title = "Sparkt Work | iCanhelp";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | ICan Help";
+    ViewBag.MetaTitle = "Sparkt | iCanhelp";
     ViewBag.MetaDescription = "Intimate Confidant";
     ViewBag.MetaURL = "https://sparkt.in/work/iCanhelp";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ican-thum.jpg";
 }
 
-@section BodyClass {ICan}
+@section BodyClass {piramal}
     <main>
         <div class="section white-bg">
             <div class="work-banner">
@@ -41,20 +41,20 @@
                                     <div class="website-operation">
                                         <figure class="figure-img"> <img src="/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
                                         <div class="desktop-video">
-                                            <video id="desktop" poster="/Content/work/images/ican-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ican-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-desktop.mp4" type="video/mp4" >-->
+                                            <video id="desktop" style="max-width: 100%; background-image: url('/Content/work/images/ican-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                                 <source  src="~/Content/work/media/ican-desktop.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById( "desktop" ).controls = false;</script>
                                         </div>
                                         <div class="mobile-video">
-                                            <video id="mobile" poster="/Content/work/images/ican-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ican-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-mob.mp4" type="video/mp4" >-->
+                                            <video id="mobile" style="max-width: 100%; background-image: url('/Content/work/images/ican-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
+                                                <source  src="~/Content/work/media/ican-mobile.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById("mobile").controls = false;</script>
                                         </div>
-                                        <!--                  <a href="https://www.pchf.in/" target="_blank" class="view-website" >VIEW WEBSITE</a> -->
+                                                       <a href="https://www.icanhelp.in/" target="_blank" class="view-website" >VIEW WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
