--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -49,17 +49,17 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/india-rf-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/india-rf-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                            <!--<source  src="media/desktop.mp4" type="video/mp4" >
-                                            <source src="media/desktop.ogg" type="video/ogg" >-->
+                                        <video id="desktop" style="max-width: 100%; background-image: url('/Content/work/images/india-rf-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                          <source  src="~/Content/work/media/india-rf-desktop.mp4" type="video/mp4" >
+                                           
                                         </video>
                                         <script> document.getElementById( "desktop" ).controls = false;
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/india-rf-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/india-rf-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                            <!--<source  src="media/mobile.mp4" type="video/mp4" >
-                                            <source src="media/mobile.ogg" type="video/ogg" >-->
+                                        <video id="mobile" style="max-width: 100%; background-image: url('/Content/work/images/india-rf-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                           <source  src="~/Content/work/media/india-rf-mobile.mp4" type="video/mp4" >
+                                     
                                         </video>
                                         <script>document.getElementById("mobile").controls = false;
                                         </script>
