--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | MMF NFO Launches";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF NFO Launches";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | MMF NFO Launches";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF NFO Launches";
     ViewBag.MetaDescription = "Seamless integration of traditional and digital media.";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraNfoLaunches";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
@@ -124,7 +124,7 @@
                         It is always challenging to be relevant to a market that does not understand the concept of mutual funds. Sparkt has helped us do that by developing communication that cuts across audience cuts and make a dent in a cluttered category that talks of similar themes across products.
 
                     </h3>
-                    <span class="quotes-writer">Mr. Ashutosh Bishnoi : MD & CEO Mahindra Manulife Mutual Fund</span>
+                    <span class="quotes-writer">Mr. Ashutosh Bishnoi : MD & CEO Mahindra Mutual Fund</span>
                 </div>
             </div>
         </div>
