--- a/Sparkt.WebApp/Views/work/MahindraTah.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTah.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | Kar Bachat Yojana";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | Kar Bachat Yojana";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | Kar Bachat Yojana";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Kar Bachat Yojana";
     ViewBag.MetaDescription = "Igniting a national debate on Taxes Acche Hain ahead of Budget 2017";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraTah";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/tah-thum.jpg";
