--- a/Sparkt.WebApp/Views/work/OurDaily.cshtml
+++ b/Sparkt.WebApp/Views/work/OurDaily.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/ourdaily";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ourdaily-thum.jpg";
 }
-
+@section BodyClass {piramal}
     <main>
         <div class="section white-bg">
             <div class="work-banner">
@@ -42,20 +42,20 @@
                                     <div class="website-operation">
                                         <figure class="figure-img"> <img src="/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
                                         <div class="desktop-video">
-                                            <video id="desktop" poster="/Content/work/images/ourdaily-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ourdaily-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-desktop.mp4" type="video/mp4" >-->
+                                            <video id="desktop" style="max-width: 100%; background-image: url('/Content/work/images/ourdaily-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                             <source  src="~/Content/work/media/ourdaily-desktop.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById( "desktop" ).controls = false;</script>
                                         </div>
                                         <div class="mobile-video">
-                                            <video id="mobile" poster="/Content/work/images/ourdaily-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ourdaily-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
-                                                <!-- <source  src="media/brickex-mob.mp4" type="video/mp4" >-->
+                                            <video id="mobile" style="max-width: 100%; background-image: url('/Content/work/images/ourdaily-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
+                                                <source  src="~/Content/work/media/ourdaily-mobile.mp4" type="video/mp4" >
 
                                             </video>
                                             <script>document.getElementById("mobile").controls = false;</script>
                                         </div>
-                                        <!--                  <a href="https://www.pchf.in/" target="_blank" class="view-website" >VIEW WEBSITE</a> -->
+                                                 <a href="https://www.ourdaily.in/" target="_blank" class="view-website" >VIEW WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
