--- a/Sparkt.WebApp/Views/work/Phfl.cshtml
+++ b/Sparkt.WebApp/Views/work/Phfl.cshtml
@@ -52,7 +52,7 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/phfl-desktop.jpg" style="max-width: 100%;" preload="none" controls="False" loop autoplay playsinline webkit-playsinline>
+                                        <video id="desktop" poster="~/Content/work/images/phfl-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/phfl-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
@@ -60,7 +60,7 @@
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/phfl-mobile.jpg" style="max-width: 100%;" preload="none" controls="false" loop autoplay playsinline webkit-playsinline>
+                                        <video id="mobile" poster="~/Content/work/images/phfl-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/phfl-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
