--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "https://sparkt.in/work/bql";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/boutique-thum.jpg";
 }
-@section BodyClass {others}
+@section BodyClass {indiabulls}
 <main>
     <div class="section">
         <div class="work-banner">
