--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | MMF Textmoji";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF Textmoji";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | MMF Textmoji";
-    ViewBag.MetaDescription = "ELEVATING MAHINDRA MANULIFE MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF Textmoji";
+    ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
     ViewBag.MetaURL = "https://sparkt.in/work/TextMoji";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
