--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | Mahindra Manulife Mutual Fund | Mahindra - Unnati Emerging Business Yojana";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | Mahindra - Unnati Emerging Business Yojana";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | Mahindra Manulife Mutual Fund | Mahindra - Unnati Emerging Business Yojana";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Mahindra - Unnati Emerging Business Yojana";
     ViewBag.MetaDescription = "Samay se Aagey";
     ViewBag.MetaURL = "https://sparkt.in/work/MahindraUnnati";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg";
