--- a/Sparkt.WebApp/Views/work/Yaarii.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaarii.cshtml
@@ -47,8 +47,8 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/yaarii-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/yaarii-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                            <!--  <source  src="media/piramal-desktop.mp4" type="video/mp4" >-->
+                                        <video id="desktop"  style="max-width: 100%; background-image: url('/Content/work/images/yaarii-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                              <source  src="~/Content/work/media/yaarii-desktop.mp4" type="video/mp4" >
 
                                         </video>
                                         <script>
@@ -56,8 +56,8 @@
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/yaari-app.gif" style="max-width: 100%; background-image: url('/Content/work/images/yaari-app.gif" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
-                                            <!--<source  src="media/piramal-mobile.mp4" type="video/mp4" >-->
+                                        <video id="mobile" style="max-width: 100%; background-image: url('/Content/work/images/yaarii-mobile.jpg" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                            <source  src="~/Content/work/media/yaarii-mobile.mp4" type="video/mp4" >
 
                                         </video>
                                         <script>
@@ -65,7 +65,7 @@
                                         </script>
                                     </div>
 
-                                    <a href="https://www.yaarii.in/" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="http://madebysparkt.com/yaarii/home" target="_blank" class="view-website">VIEW WEBSITE</a>
 
                                 </div>
                             </div>
